# unit_tests_generator

./: .gitignore  ai_test_generator.py  code_analyzer_agent.py  cover_agent_unit_test_runs.db  function_path_agent.py  main.py  pyproject.toml  test_results.html  test_strategist_agent.py  test_writer_agent.py  verification_agent.py
app/: calculator.py  main.py  test_app.py  test_calculator.py
generated_tests/: test_calculator.py  test_main.py
tests/: test_api.py  test_calculator.py
