[project]
name = "qodo-cover-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cover-agent",
    "fastapi>=0.115.14",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.uv.sources]
cover-agent = { git = "https://github.com/qodo-ai/qodo-cover.git" }
